# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: AddGitSubModules.cmake
files/: untitled.gltf
include/: CMakeLists.txt
include/base_libs/: CMakeLists.txt  Light.h  Material.h  PointLight.h  Shader.h  ShadowMap.h  SpotLight.h  Texture.h
include/custom_lib/: CMakeLists.txt  Camera.h  DirectionalLight.h  GUI.h  Light.h  Mesh.h  Model.h  OmniShadowMap.h  PointLight.h  Shader.h  ShadowMap.h  SpotLight.h  Texture.h  Utilities.h  Window.h
include/custom_lib/animation/: animation.h  animator.h  bone.h  camera.h  filesystem.h  mesh.h  model_animation.h  shader.h  shader_m.h
include/imgui_lib/: Bones.h  CMakeLists.txt  Camera.h  DirectionalLight.h  GUI.h  Light.h  Material.h  MathFuncs.h  Model.h  Movement.h  Picking.h  Scene.h  Shader.h  Skybox.h  SpotLight.h  Texture.h  Utilities.h  Window.h
include/imgui_lib/algorithms/: randomDistribute.h
include/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
src/: CMakeLists.txt  Camera.cpp  DirectionalLight.cpp  GUI.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  OmniShadowMap.cpp  PointLight.cpp  Shader.cpp  ShadowMap.cpp  Skybox.cpp  SpotLight.cpp  Texture.cpp  Utilities.cpp  Window.cpp  animationMain.cpp  main.cpp
src/Base/: CMakeLists.txt  Camera.cpp  DirectionalLight.cpp  Light.cpp  Model.cpp  OmniShadowMap.cpp  Shader.cpp  ShadowMap.cpp  Skybox.cpp  SpotLight.cpp  Texture.cpp  main.cpp
src/Base/Shaders/: directionalShadowMap.vert  shader.frag  shader.vert
src/Imgui/: CMakeLists.txt  Camera.cpp  GUI.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Movement.cpp  Picking.cpp  Scene.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Window.cpp  main.cpp
src/Imgui/Models/: Zombie Scream.dae  buildings.mtl  buildings_2.mtl  crate.mtl  floor.mtl  monkey.mtl  monkey1.mtl
src/Imgui/Shaders/: BRDF_Normals.frag  Simple.frag  finalShader.frag
src/Imgui/Shaders/Backups/: BRDF_Normals.vert  minnaert.frag  multiMapShader.frag  roughnessTexture.frag
src/Imgui/Textures/: Curtiss_T18.mtl
src/Imgui/commons/: Camera.cpp  DirectionalLight.cpp  Light.cpp  Material.cpp  MathFuncs.cpp  PointLight.cpp  Shader.cpp  Skybox.cpp  Utilities.cpp  Window.cpp
src/Models/: Zombie Walk.dae  bridge.mtl  fillers.mtl  fillers2.mtl  pavement.mtl  roads.mtl  waterWalls.mtl  waterWay.mtl
src/Models/Docks/: TexturesCom_CeramicBrick_1024_gloss.tif  TexturesCom_CeramicBrick_1024_normal.tif  TexturesCom_CeramicBrick_1024_roughness.tif
src/Path_Tracing/: imgui.ini  opengl-raytracing.vcxproj  opengl-raytracing.vcxproj.filters
src/Path_Tracing/Dependencies/include/64/glad/: glad.h
src/Path_Tracing/shaders/: RayTracing.frag  RayTracing.vert  RayTracing_Backup.frag
src/Path_Tracing/src/: GUI.cpp  GUI.h  MathFuncs.cpp  MathFuncs.h  Procedural_scenes.h  Scene.cpp  Scene.h  Utilities.h  main.cpp
src/Procedural/: CMakeLists.txt  Camera.cpp  GUI.cpp  Material.cpp  Model.cpp  Skybox.cpp  SpotLight.cpp  Texture.cpp  main.cpp
src/Procedural/Models/: buildings.mtl  buildings_2.mtl
src/Procedural/Shaders/Backups/: environmentMapping.frag  shader.frag  shaderGooch.frag
src/Procedural/algorithms/: randomDistribute.cpp
src/Shaders/: directionalShadowMap.vert  omniShadowMap.frag  omniShadowMap.geom  omniShadowMap.vert  shader.frag  shader.vert  shaderAnimated.vert  skybox.frag
src/Shaders/Backup/: shader.vert
src/Textures/: Shingle diffuse final_v2.tif  TexturesCom_CeramicBrick_1024_Cavity_ao.tif  TexturesCom_GenericBricks_1024_albedo_01_Smallgrout.tif  TexturesCom_GenericBricks_1024_albedo_Red_01_Smallgrout.tif  TexturesCom_GenericBricks_1024_normal.tif  TexturesCom_Terracotta_1024_roughness.tif  TexturesCom_WhiteBrick_1024_albedo.tif
src/Trials/: loadFile.cpp  main.cpp  rotCube.cpp  triangle.cpp
src/Unused/IK/: Bones.cpp  CMakeLists.txt  GUI.cpp  Mesh.cpp  Model.cpp  main.cpp  mainBackup.cpp
src/Unused/IK/Models/: Axis.mtl  bone.mtl  cube.mtl  tracker.mtl
src/Unused/IK/Shaders/: BRDF_Normals.frag  boneShader.frag  boneShader.vert  finalShader.frag  skybox.vert
src/Unused/IK/Shaders/Backups/: shaderBlinn.frag
src/Unused/IK/commons/: Skybox.cpp  Texture.cpp
